nginx/web_code/stylesheets/default.css
/* ... */
.active path:nth-child(1) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}
.active path:nth-child(2) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}
.active path:nth-child(3) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}
.active path:nth-child(4) {
    stroke-dasharray: 225 299;
    stroke-dashoffset: -72px;
}
.active path:nth-child(5) {
    transform: translateX(9px) translateY(1px) rotate(-45deg);
}
.active path:nth-child(6) {
    transform: translateX(9px) translateY(1px) rotate(45deg);
}

/* Navigation bar*/
.navbar.banner {
    top: 0;
}

.navbar a:hover {
    background: white;
    color: var(--navbar-bg-colour);
}

.navbar a {
    display: block;
    color: rgb(242, 242, 242);
    padding: 10px;
    letter-spacing: -0.01562em;
}

.navbar-left {
    display: flex;
}

.navbar-right {
    display: none;
    font-weight: bold;
    font-size: 1.5rem;
    margin-top: 50px;
    background-color: var(--navbar-bg-colour);
    width: 100%;
    position: absolute;
    left: 0;
    padding-bottom: 15px;
    text-align: center;
}

/* Hide the scroll bar for the language select in some browsers*/
select {
    overflow-y: auto;
    display: block;
    margin: 0 auto;
}

.lang-navbar {
    width: 100%;
    word-spacing: -0.1em;
}

#language-select {
    appearance: none;
    -webkit-appearance: none;
    font-family: 'Roboto Condensed', arial, monospace;
    font-size: 1.5rem;
    font-weight: bold;
    position: relative;
    background-color: var(--navbar-bg-colour);
    color: white;
    cursor: pointer;
}

#language-select option:hover {
    background-color: white;
    color: var(--navbar-bg-colour);
}

/* Dark mode */
.dark-mode {
    background-color: var(--dark-mode-dark-colour);
    color: white;
}

.switch {
    position: relative;
    display: inline-block;
    width: 90px;
    height: 50px;
    left: -10px;
}
  
.switch input { 
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 10px;
    left: 10px;
    right: 0;
    bottom: 0;
    background-color: rgb(204, 204, 204);
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: '';
    height: 50px;
    width: 50px;
    left: -2px;
    bottom: -5px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    content: '✹';
    color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

input:checked + .slider {
    background-color: rgb(107, 107, 107);
}
  
input:focus + .slider {
    box-shadow: 0 0 1px rgb(107, 107, 107);
}
  
input:checked + .slider:before {
    -webkit-transform: translateX(32px);
    -ms-transform: translateX(32px);
    transform: translateX(32px);
    background-color: rgb(40, 40, 40);
    content: '☾';
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

.slider.round {
    border-radius: 34px;
}
  
.slider.round:before {
    border-radius: 50%;
}

/* Video */
.video-background {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    overflow: hidden;
    align-items: center;
    display: flex;
    justify-content: center;
}

.dark-background{
    background-color: rgba(45, 49, 53, 0.75);
}

/* Content */
.profile-overview.content-box {
    position: relative;
    width: 100%;
    height: 679px;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.content {
    position: relative;
    flex: 1 0 auto;
    font-size: 1rem;
    font-family: 'Roboto Condensed', arial, monospace;
    flex: 1;
    margin-top: 50px;
    overflow: hidden;
}

.section-heading {
    font-size: 3rem;
    margin: 0px 0px 0.35em;
    text-align: center;
    font-weight: 400;
    line-height: 1.167;
    letter-spacing: 0em;
}

.section-text{
    font-size: 1rem;
    box-sizing: border-box;
}

.content-inner {
    width: 100%;
    margin: 0px auto;
    display: block;
}

.content-box {
    padding: 0px 5px;
    width: 97%;
    height: 100%;
}

.content-left{
    float: left;
}

.content-right{
    float: right;
}

.lang {
    width: 100%;
}

.profile-banner {
    position: absolute;
    width: 100%;
    margin-left: auto;
    display: block;
    text-align: center;
    z-index: 5;
}

.salutation {
    line-height: 33px;
    text-transform: uppercase;
    color: rgb(0, 163, 217);
    font-size: 1.1rem;
    letter-spacing: 0.2em;
    font-weight: 600;
}

.name {
    font-size: 6rem;
    font-weight: 900;
    line-height: 103%;
    color: white;
    margin: 0;
    letter-spacing: -0.01562em;
}

.job-title{
    margin: 0px;
    font-size: 1.4rem;
    line-height: 33px;
    font-weight: 500;
    letter-spacing: 0.00938em;
    color: rgba(255, 255, 255);
}

.down-button{
    position: absolute;
    width: 100%;
    text-align: center;
    cursor: pointer;
    z-index: 1;
    bottom: 64px;
    font-size: 56px;
}

.down-button a {
    color: white;
    transition: 1s;
}

.divider {
    border-width: 0px 0px thin;
    border-style: solid;
    border-color: rgba(0, 0, 0, 0.12);
    opacity: 0.5;
    width: 80%;
    margin: 8px auto;
}

.divider-exp {
    border-color: black;
    padding-top: 10px;
    margin-bottom: 30px;
}

.dark-mode .divider-exp {
    border-color: white;
    background-color: transparent;
}

.content-divider {
    opacity: 1;
    border-color: rgba(0, 0, 0, 1);
    margin-top: 0px;
    margin-bottom: 0px;
}

.wrapper{
    padding: 20px 0;
}

.divider-wrapper {
    margin: 0px;
}

/* Give each section an alternating class of odd/even and distinguish the background colour based on that */
.evens {
    background-color: var(--content-alternate-bg-colour);
}

.dark-mode .evens {
    background-color: var(--dark-mode-light-colour);
}
/* ... */

